12/13/10 #2611, move color of pH paper to ABSColors
12/13/10 #2610, increase font size of y-axis on graph (from 16 to 20 point)
12/13/10 #2610, use black for "negligible" text in graph
12/10/10 restore molecule images
# 1.00.01 (47056) Dec 10, 2010
12/10/10 demonstrate proposed color changes to address colorblind issues
12/10/19 #2577, try Kelly's new colors, use colored circles instead of molecule images throughout
12/10/10 #2577, add ability to substitute single-color circles for molecules images, for testing alternative colors
12/8/10 move molecules.svg into assets, remove bite out of A- in the SVG file
11/30/10 add colorblindness test app, ABSTestColorblindness, see #2577
# 1.00.00 (43926) Sep 10, 2010
9/10/10 1st deployment of acid-base-solutions
9/9/10 remove '_' prefix in member data names for older code, so that convention is the same throughout
9/9/10 update screenshot to match current state of the sim
9/9/10 change "Concentration" radio button to "Equilibrium Concentration"
9/9/10 change "Concentration" slider label to "Initial Concentration"
9/2/10 create all icons staticly in ABSImages, delete duplicate H2O image file
9/2/10 move Views above Tests in control panel, liked this in interviews
8/31/10 replace local implementation of BlackSeparator with phetcommon
8/30/10 use PhetTitledPanel instead of using PhetTitledBorder directly, #2476
8/26/10 restore ordering of control panel
# 0.00.25 (43537) Aug 26, 2010
8/26/10 interview version that has Views above Tests in control panel
8/26/10 clean up light bulb icon
8/26/10 clean up pixels along the left and right edges of the light bulb image
8/25/10 delete stubs for Save/Load feature, not needed in this sim
8/25/10 move beaker location to (0,0)
8/25/10 reorganize and document ABSConstants (no values changed)
8/25/10 move some constants from ABSConstants to MoleculesNode
8/25/10 change Molecule.getIcon to Molecule.getImage (it returns an Image, not an Icon)